// Code generated by gen-struct. DO NOT EDIT.
// make gen-protobuf generated

syntax = "proto3";

option go_package = "pkg/proto";

import "stringx.proto";
import "listx.proto";
import "hashx.proto";
import "setx.proto";
import "channelx.proto";


service CommServer {
  rpc Set (SetRequest) returns (SetResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
  rpc Reduce (ReduceRequest) returns (ReduceResponse);
  rpc SetBit (SetBitRequest) returns (SetBitResponse);
  rpc GetBit (GetBitRequest) returns (GetBitResponse);
  rpc GetRange (GetRangeRequest) returns (GetRangeResponse);
  rpc GetSet (GetSetRequest) returns (GetSetResponse);
  rpc StrLen (StrLenRequest) returns (StrLenResponse);
  rpc Setnx (SetnxRequest) returns (SetnxResponse);
  rpc LIndex (LIndexRequest) returns (LIndexResponse);
  rpc LLen (LLenRequest) returns (LLenResponse);
  rpc LPop (LPopRequest) returns (LPopResponse);
  rpc LPush (LPushRequest) returns (LPushResponse);
  rpc LPushX (LPushXRequest) returns (LPushXResponse);
  rpc LRange (LRangeRequest) returns (LRangeResponse);
  rpc LRem (LRemRequest) returns (LRemResponse);
  rpc LSet (LSetRequest) returns (LSetResponse);
  rpc RPop (RPopRequest) returns (RPopResponse);
  rpc LTrim (LTrimRequest) returns (LTrimResponse);
  rpc RPush (RPushRequest) returns (RPushResponse);
  rpc RPushX (RPushXRequest) returns (RPushXResponse);
  rpc HDel (HDelRequest) returns (HDelResponse);
  rpc HExists (HExistsRequest) returns (HExistsResponse);
  rpc HGet (HGetRequest) returns (HGetResponse);
  rpc HGetAll (HGetAllRequest) returns (HGetAllResponse);
  rpc HIncrBy (HIncrByRequest) returns (HIncrByResponse);
  rpc HKeys (HKeysRequest) returns (HKeysResponse);
  rpc HLen (HLenRequest) returns (HLenResponse);
  rpc HSet (HSetRequest) returns (HSetResponse);
  rpc HSetX (HSetXRequest) returns (HSetXResponse);
  rpc SAdd (SAddRequest) returns (SAddResponse);
  rpc SCard (SCardRequest) returns (SCardResponse);
  rpc SDiff (SDiffRequest) returns (SDiffResponse);
  rpc SDiffStore (SDiffStoreRequest) returns (SDiffStoreResponse);
  rpc SInter (SInterRequest) returns (SInterResponse);
  rpc SInterStore (SInterStoreRequest) returns (SInterStoreResponse);
  rpc SIsMember (SIsMemberRequest) returns (SIsMemberResponse);
  rpc SMove (SMoveRequest) returns (SMoveResponse);
  rpc SPop (SPopRequest) returns (SPopResponse);
  rpc SRem (SRemRequest) returns (SRemResponse);
  rpc SUnion (SUnionRequest) returns (SUnionResponse);
  rpc SUnionStore (SUnionStoreRequest) returns (SUnionStoreResponse);
  rpc SScan (SScanRequest) returns (SScanResponse);
  rpc CPush (CPushRequest) returns (CPushResponse);
  rpc CPop (CPopRequest) returns (CPopResponse);
  rpc CMake (CMakeRequest) returns (CMakeResponse);
  rpc CLen (CLenRequest) returns (CLenResponse);
  rpc CClean (CCleanRequest) returns (CCleanResponse);
}